--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.<br></font></h4>
+    <p>Featured Airdrop!</p>
+    <p>MBK exchange airdrop! Get MBK tokens worth $5 and claim builtin high paying BTC faucet.</p>
+	  <a href="https://www.memebank.com/en/airdrop?id=2dfc32"  target="_blank" >
+	  <img src="/file/mbk.png" alt= "fpay" width="468" height="60"><br>  </a><p></p>
     <p>Join FaucetPay first if you haven't already.</p>
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
@@ -44,64 +48,67 @@
         <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://speedcoins.xyz/?r=924">3. Speedcoins</a></h3>
-      <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Instant.</p>
-      <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">4. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">5. Vie Faucet</a></h3>
+    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">4. Vie Faucet</a></h3>
          <p>$0.00045 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
     <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
       <img src="/file/vie.png" width="468" height="60"/></a><br>
          <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://tron-free.com/?r=89595">7. Tron Free</a></h3>
+    <a href="https://tron-free.com/?r=89595">6. Tron Free</a></h3>
      <p>$0.0006 every 5 mins. shortliks, PTC, offerwalls. </p>
      <a target="_blank" href="https://tron-free.com/?r=89595" >
       <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-        <a href="https://oceanbitz.com/?r=108">8. Oceanbitz</a></h3>
-        <p>$0.00065 every 3 mins. $0.0004 every min. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
-        <a target="_blank" href="https://oceanbitz.com/?r=108" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
-        <p></p></div>
+
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+          <a href="https://bitcointrophy.com/?r=21954">7. Bitcoin Trophy</a></h3>
+            <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
+            <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
 
 
      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://r.adbtc.top/7297">9. Adbtc.top</a></h3>
+      <a href="https://r.adbtc.top/7297">8. Adbtc.top</a></h3>
       <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">10. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">9. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-              <a href="https://cryptowin.io/ref/tsaroz">11. Cryptowin.io</a></h3>
+              <a href="https://cryptowin.io/ref/tsaroz">10. Cryptowin.io</a></h3>
               <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
               <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
               <p></p></div>
+
+
+              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+                <a href="https://oceanbitz.com/?r=108">11. Oceanbitz</a></h3>
+                <p>$0.00065 every 3 mins. $0.0005 every 3 mins. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
+                <a target="_blank" href="https://oceanbitz.com/?r=108" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
+                <p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                           <a href="https://multicoins.net/?r=74750">12. Multicoins</a></h3>
@@ -114,11 +121,12 @@
                 <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
                  <p></p> </div>
 
+                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                  <a href="https://speedcoins.xyz/?r=924">14. Speedcoins</a></h3>
+                  <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Manual.</p>
+                  <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
 
-   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-    <a href="https://bitcointrophy.com/?r=21954">14. Bitcoin Trophy</a></h3>
-      <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
-      <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
+
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
         <a href="https://coinadster.com/?ref=208315">15. Coinadster</a></h3>
@@ -365,7 +373,7 @@
         <a href="http://gobits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Gobits 1 sats 15 mins</a><p></p>
 
 
-          </div></div><p></p>
+          </div></div><p>Reminder: Premium faucets provides more rewards without shortlinks. At least $0.0005 and their withdrawal limits are low too. So, they should be your first priority.</p>
 
 
   </div>
@@ -373,62 +381,7 @@
   <div class="panel" id="three-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
 
-     <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
-      <div class="w3-center">
-        <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 3 sats 1 min</a><p></p>
-        <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesolana 3+ sats 2 mins</a><p></p>
-    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 2 mins</a><p></p>
-    <a href="https://safbits.com?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Safbits 3 sats 1 min</a><p></p>
-    <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Receh 3 sats 3 mins</a><p></p>
-
-      </div></div><p></p>
-
-
-
-     <div class="w3-container w3-border w3-border-red"> <center> <h4> Solana FaucetPay</h4></center>
-    <div class="w3-center">
-  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Litefaucet $0.002 1 min</a><p></p>
-  <a href="https://karimunbits.net/solana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Karimunbits $0.0012 sol 1 min</a><p></p>
-  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Ole faucet $0.00145 3 mins</a><p></p>
-  <a href="https://freesol.biz/freesolana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesol 1500 sol 2 mins</a><p></p>
-  <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Extra Crypto 1200+ sol 1 min</a><p></p>
-  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesolana 1300+ sol 2 mins</a><p></p>
-    </div></div><p></p>
-
-    <div class="w3-container w3-border w3-border-red"> <center> <h4> Litecoin FaucetPay </h4> </center>
-    <div class="w3-center">
-
-      <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claimlitecoin $0.002 1 min</a><p></p>
-      <a href="https://doctor-groups.com/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Doctor groups $0.002 5 mins</a><p></p>
-      <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Earnalot $0.0014 1 min</a><p></p>
-      <a href="http://ltcking.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Ltc king $0.0014 1 min</a><p></p>
-       <a href="https://bitzite.com/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Bitzite $0.0013 1 min</a><p></p>
-       <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Ole Faucet $0.0014 3 mins</a><p></p>
-          <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Payou win $0.0013 1 min</a><p></p>
-      <a href="https://zica.site/ref/LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Zica Faucet $0.0011 1 min</a><p></p>
-      <a href="https://ltc.simplifaucet.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Simpli faucet $0.0016 5 mins</a><p></p>
-
-    </div></div><p></p>
-
-      <div class="w3-container w3-border w3-border-red"> <center> <h4> Tron FaucetPay </h4> </center>
-        <div class="w3-center">
-          <a href="https://unlimfaucet.com?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">Unlim faucet $0.0013 1 min</a><p></p>
-      <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">Olex faucet $0.0015 3 mins</a><p></p>
-      <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">Ole faucet $0.0013 3 mins</a><p></p>
-      <a href="https://grabtrx.link?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">Grabtrx $0.001 1 min</a><p></p>
-          </div></div><p></p>
-
-          <div class="w3-container w3-border w3-border-red"> <center> <h4> Dogecoin FaucetPay </h4> </center>
-            <div class="w3-center">
-              <a href="https://turpoorco.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Turpoorco $0.00125 1 min</a><p></p>
-              <a href="https://earndoge.tk?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-teal" style="width:60%">Earn Doge $0.001 1 min</a><p></p>
-            </div></div><p></p>
-
-                   <div class="w3-container w3-border w3-border-red"> <center> <h4> USDT FaucetPay </h4> </center>
-                    <div class="w3-center">
-                      <a href="https://janads.com?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">janads $0.002 2 mins</a><p></p>
-                      <a href="https://here-crypto.com/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">Herecrypto $0.0011 5 mins</a><p></p>
-                     </div></div><p></p>
+<p>Premium faucets have better rewarding shortlinks so none are further listed here.</p>
 
     </div>
   </div>
