--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
 <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.<br></font></h4>
-    <p>Featured Airdrop!</p>
-    <p>MBK exchange airdrop! Get MBK tokens worth $5 and claim builtin high paying BTC faucet.</p>
-	  <a href="https://www.memebank.com/en/airdrop?id=2dfc32"  target="_blank" >
-	  <img src="/file/mbk.png" alt= "fpay" width="468" height="60"><br>  </a><p></p>
+
+
     <p>Join FaucetPay first if you haven't already.</p>
-	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
+	  <a href="https://faucetpay.io/?r=2516">
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
@@ -43,70 +41,64 @@
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
+        <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">2. Vie Faucet</a></h3>
+             <p>$0.0005 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
+        <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
+          <img src="/file/vie.png" width="468" height="60"/></a><br>
+             <p></p></div>
+
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
         <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
         <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 
-
-
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">4. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
-
-  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">4. Vie Faucet</a></h3>
-         <p>$0.00045 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
-    <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
-      <img src="/file/vie.png" width="468" height="60"/></a><br>
-         <p></p></div>
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+        <a href="https://cryptowin.io/ref/tsaroz">5. Cryptowin.io</a></h3>
+        <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
+        <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
+        <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
+   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+    <a href="https://r.adbtc.top/7297">7. Adbtc.top</a></h3>
+    <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
+    <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+    <p></p></div>
+
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://www.coinpayu.com/?r=tsaroz">8. CoinpayU</a></h3>
+           <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
+      <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
+        <img src="/file/payu.gif" width="468" height="60"/></a><br>
+           <p></p></div>
+
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://tron-free.com/?r=89595">6. Tron Free</a></h3>
+    <a href="https://tron-free.com/?r=89595">9. Tron Free</a></h3>
      <p>$0.0006 every 5 mins. shortliks, PTC, offerwalls. </p>
      <a target="_blank" href="https://tron-free.com/?r=89595" >
       <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-          <a href="https://bitcointrophy.com/?r=21954">7. Bitcoin Trophy</a></h3>
+          <a href="https://bitcointrophy.com/?r=21954">10. Bitcoin Trophy</a></h3>
             <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
             <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
-
-
-     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://r.adbtc.top/7297">8. Adbtc.top</a></h3>
-      <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
-      <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
-      <p></p></div>
-
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">9. CoinpayU</a></h3>
-             <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
-        <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
-          <img src="/file/payu.gif" width="468" height="60"/></a><br>
-             <p></p></div>
-
-             <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-              <a href="https://cryptowin.io/ref/tsaroz">10. Cryptowin.io</a></h3>
-              <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
-              <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
-              <p></p></div>
-
-
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
                 <a href="https://oceanbitz.com/?r=108">11. Oceanbitz</a></h3>
-                <p>$0.00065 every 3 mins. $0.0005 every 3 mins. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
+                <p>$0.0006 every 2 mins. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
                 <a target="_blank" href="https://oceanbitz.com/?r=108" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
                 <p></p></div>
 
@@ -122,9 +114,9 @@
                  <p></p> </div>
 
                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                  <a href="https://speedcoins.xyz/?r=924">14. Speedcoins</a></h3>
-                  <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Manual.</p>
-                  <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
+                  <a href="https://banfaucet.com/?r=11036">14. Banfaucet</a></h3>
+                  <p>$0.005 every 5 mins. Banano, Matic, Tron, etc. $0.01 to FaucetPay.</p>
+                  <a target="_blank" href="https://banfaucet.com/?r=11036"><img src="/file/banfaucet.gif" width="468" height="60"></a><p></p></div>
 
 
 
