--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">2. Vie Faucet</a></h3>
-             <p>$0.0005 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
+             <p>$0.0005+ every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
         <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
           <img src="/file/vie.png" width="468" height="60"/></a><br>
              <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
-        <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
+        <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
         <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://earnbitmoon.club/?ref=145452">4. Earnbitmoon</a></h3>
-      <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
+      <p>$0.0005+ every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
@@ -66,7 +66,7 @@
         <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
@@ -95,7 +95,7 @@
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
         <a href="https://coinadster.com/?ref=208315">10. Coinadster</a></h3>
-                         <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
+                         <p>2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
         <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
 
 
