--- a/index.html
+++ b/index.html
@@ -34,58 +34,54 @@
 	  <a href="https://faucetpay.io/?r=2516">
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-      <a href="https://coinpot.in/?r=135650">1. Coinpot.in</a></h3>
-      <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls, Daily bonus. $0.01 to FaucetPay</p>
-      <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-      <p></p></div>
+ 
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">2. Vie Faucet</a></h3>
+        <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">1. Vie Faucet</a></h3>
              <p>$0.0005+ every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
         <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
           <img src="/file/vie.png" width="468" height="60"/></a><br>
              <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
+        <a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
         <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
         <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">4. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
       <p>$0.0005+ every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-        <a href="https://cryptowin.io/ref/tsaroz">5. Cryptowin.io</a></h3>
+        <a href="https://cryptowin.io/ref/tsaroz">4. Cryptowin.io</a></h3>
         <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
         <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
         <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://r.adbtc.top/7297">7. Adbtc.top</a></h3>
+    <a href="https://r.adbtc.top/7297">6. Adbtc.top</a></h3>
     <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
     <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://www.coinpayu.com/?r=tsaroz">8. CoinpayU</a></h3>
+      <a href="https://www.coinpayu.com/?r=tsaroz">7. CoinpayU</a></h3>
            <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
       <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
         <img src="/file/payu.gif" width="468" height="60"/></a><br>
            <p></p></div>
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">9. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">8. Freebitco.in</a></h3>
     <p> $0.002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
@@ -94,31 +90,39 @@
 
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-        <a href="https://coinadster.com/?ref=208315">10. Coinadster</a></h3>
+        <a href="https://coinadster.com/?ref=208315">9. Coinadster</a></h3>
                          <p>2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
         <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">11. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">10. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">12. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">11. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls, multiple currencies, low minimum.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">13. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">12. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
        <p></p></div>
+       
+          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+
+      <a href="https://coinpot.in/?r=135650">13. Coinpot.in</a></h3>
+
+      <p>$0.001 every 60 mins. PTC, Shortlinks, Offerwalls, Daily bonus. $0.01 to FaucetPay</p>
+      <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
+      <p></p></div>
 
      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 
