--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://mixfaucet.com/?r=60837">19. Mix Faucet</a></h3>
+  <a href="https://tron-free.com/?r=89595">19. Tron Free</a></h3>
    <p>$0.0005 every 5 mins. shortliks, ptc, offerwalls. $0.05 to Faucetpay.</p>
-   <a target="_blank" href="https://mixfaucet.com/?r=60837" >
+   <a target="_blank" href="https://tron-free.com/?r=89595" >
     <img src="/file/mix.gif" width="468" height="60"/></a><br><p></p></div>
 
 
