--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <br>
 
 
-<p>ccz.one @ 2021-2022</p><br>
+<center><p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLYLYN29RX"></script>
