--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h4><font color=red>Bookmark us! All links opens in new tab.<br></font></h4>
 
 
-    <p>Join FaucetPay first if you haven't already.</p>
+    <p>Join FaucetPay first if you haven't already. You need it to receive micropayemts from faucets.</p>
 	  <a href="https://faucetpay.io/?r=2516">
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
@@ -38,26 +38,26 @@
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">1. Vie Faucet</a></h3>
-             <p>$0.0005+ every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
+             <p>$0.0005+ every 3 mins. Easy captcha. Daily bonus that gives rewards as well as increases the faucet value. Achievements for completing PTC ads, shortlinks, faucet claims. Daily happy hour where you earn 10% more rewards.</p>
         <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
           <img src="/file/vie.png" width="468" height="60"/></a><br>
              <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
-        <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
+        <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 payment to FaucetPay. Daily login gives increased faucet upto 100%. More reward as you level up. Easy achievements to reach.</p>
         <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
-      <p>$0.0005+ every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
+      <p>$0.0005+ every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay. They pay the most on offerwalls compared to other sites.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
         <a href="https://cryptowin.io/ref/tsaroz">4. Cryptowin.io</a></h3>
-        <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
+        <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay. Optional investment option, invest at your own risk.</p>
         <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
         <p></p></div>
 
@@ -82,7 +82,7 @@
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://freebitco.in/?r=5188579">8. Freebitco.in</a></h3>
-    <p> $0.002+ worth of bitcoin every hour. No Ads.</p>
+    <p> $0.002+ worth of bitcoin every hour. Get 50% refback for life on joining through this link.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>    
@@ -97,7 +97,7 @@
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">10. Final Dutchy</a></h3>
-      <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
+      <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus on firday, saturday and sunday.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
@@ -128,7 +128,7 @@
 
                   <a href="https://banfaucet.com/?r=11036">14. Banfaucet</a></h3>
 
-                  <p>$0.005 every 5 mins. Banano, Matic, Tron, etc. $0.01 to FaucetPay.</p>
+                  <p>$0.005 every 5 mins. Doge, Banano, Matic, Tron, etc. $0.01 to FaucetPay.</p>
                   <a target="_blank" href="https://banfaucet.com/?r=11036"><img src="/file/banfaucet.gif" width="468" height="60"></a><p></p></div>
                   
 
