--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
     <a href="https://bitcoincuba.net/freeeth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
             <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
         <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
+          <a href="https://bitcoincuba.net/freetether/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">USDT 1 min</a>
       </center><p></p></div>
     <p></p>
 
