--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
 <br>
 
 
-<center><p>ccz.one @ 2021-2022</p><br>
+<center><a href="https://buxfire.co.uk/?rh=747361726F7A"><img
+src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a>
+  <br><p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLYLYN29RX"></script>
